Add Firebase Data Connect integration and SDK
Introduced Firebase Data Connect configuration, schema, and example queries/mutations for a movie app. Added generated JavaScript and React SDKs for the default connector, updated dependencies to include Firebase and the generated connector, and initialized Firebase configuration for the project.

--- a/property-solution-react/package.json
+++ b/property-solution-react/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@reduxjs/toolkit": "^2.8.2",
+    "firebase": "^11.10.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "react": "^19.1.1",
